# SimITL

./: .gitmodules  CMakeLists.txt  README.md  build.sh  debug.sh  noise.ipynb  propThrust.ipynb  setup.sh
cmake/: windows.cmake
lib/: CMakeLists.txt  sharedmem.cpp  sharedmem.h  sharedmem.hxx  simitlinterface.h
src/: CMakeLists.txt  LerpFilter.h  LowPassFilter.h  SampleCurve.h  main.c  main.cpp  packets.h  sim.cpp  sim.h  simitl.h  vector_math.h
src/network/: packets.h
src/sim/: bf.cpp  bf.h  physics.cpp  physics.h  sim.cpp  sim.h  state.h
src/util/: LowPassFilter.h  SampleCurve.h  sharedmem.h  vector_math.h
tools/: batteryCharacteristics.ipynb  motorCharacteristics.ipynb  motorTemp.ipynb  propThrust.ipynb  rpmThrust.ipynb
tools/scripts/: batteryCharacteristics.ipynb  mcm2bmp.py  motorCharacteristics.ipynb  motorTemp.ipynb  noiseCharacteristics.ipynb  rpmThrust.ipynb
tools/simitl-tester/: CMakeLists.txt  README.md  main.cpp
